Update some licenses

--- a/src/reposca/config/Licenses.yaml
+++ b/src/reposca/config/Licenses.yaml
@@ -1706,6 +1706,7 @@ Software Licenses:
     blackReason: ''
   - alias:
     - Clarified Artistic License
+    - Artistic clarified
     identifier: ClArtistic
     fsfApproved: 'Y'
     osiApproved: 'N'
