--- a/src/reposca/config/Licenses.yaml
+++ b/src/reposca/config/Licenses.yaml
@@ -46,16 +46,6 @@ Software Licenses:
     black: 'N'
     blackReason: ''
   - alias:
-    - Artistic
-    - Artistic license
-    identifier: Artistic
-    fsfApproved: 'N'
-    osiApproved: 'N'
-    oeApproved: 'N'
-    lowRisk: 'N'
-    black: 'N'
-    blackReason: ''
-  - alias:
     - CC-BY
     identifier: CC-BY
     fsfApproved: 'N'
@@ -664,13 +654,15 @@ Software Licenses:
   - alias:
     - Artistic License 1.0
     - Artistic 1.0
+    - Artistic
+    - Artistic license
     identifier: Artistic-1.0
     fsfApproved: 'N'
     osiApproved: 'Y'
     oeApproved: 'N'
-    lowRisk: 'N'
-    black: 'Y'
-    blackReason: 'Artistic-1.0 不被GNU认可为免费软件许可证，GUN建议不要使用它，Fedora也将其列入Bad license'
+    lowRisk: 'Y'
+    black: 'N'
+    blackReason: ''
   - alias:
     - Artistic License 1.0 w/clause 8
     identifier: Artistic-1.0-cl8
@@ -2181,8 +2173,8 @@ Software Licenses:
     fsfApproved: 'N'
     osiApproved: 'N'
     oeApproved: 'N'
-    lowRisk: 'N'
-    black: 'Y'
+    lowRisk: 'Y'
+    black: 'N'
     blackReason: ''
   - alias:
     - FSF Unlimited License (with License Retention)
@@ -2191,8 +2183,8 @@ Software Licenses:
     fsfApproved: 'N'
     osiApproved: 'N'
     oeApproved: 'N'
-    lowRisk: 'N'
-    black: 'Y'
+    lowRisk: 'Y'
+    black: 'N'
     blackReason: ''
   - alias:
     - Freetype Project License
@@ -3560,27 +3552,27 @@ Software Licenses:
     fsfApproved: 'Y'
     osiApproved: 'N'
     oeApproved: 'N'
-    lowRisk: 'N'
-    black: 'Y'
-    blackReason: '不建议引入，该协议适用于字体，在GPLv2的基础上增加了例外条款，如果使用此字体创建文档，并且将此字体嵌入到文档中，并不会导致生成的文件被GPL协议覆盖，另外在分发的时候也要确保支持修改和安装。该协议也明确规定受美国法律管辖'
+    lowRisk: 'Y'
+    black: 'N'
+    blackReason: ''
   - alias:
     - SIL Open Font License 1.0 with no Reserved Font Name
     identifier: OFL-1.0-no-RFN
     fsfApproved: 'N'
     osiApproved: 'N'
     oeApproved: 'N'
-    lowRisk: 'N'
-    black: 'Y'
-    blackReason: '不建议引入，该协议适用于字体，在GPLv2的基础上增加了例外条款，如果使用此字体创建文档，并且将此字体嵌入到文档中，并不会导致生成的文件被GPL协议覆盖，另外在分发的时候也要确保支持修改和安装。该协议也明确规定受美国法律管辖'
+    lowRisk: 'Y'
+    black: 'N'
+    blackReason: ''
   - alias:
     - SIL Open Font License 1.0 with Reserved Font Name
     identifier: OFL-1.0-RFN
     fsfApproved: 'N'
     osiApproved: 'N'
     oeApproved: 'N'
-    lowRisk: 'N'
-    black: 'Y'
-    blackReason: '不建议引入，该协议适用于字体，在GPLv2的基础上增加了例外条款，如果使用此字体创建文档，并且将此字体嵌入到文档中，并不会导致生成的文件被GPL协议覆盖，另外在分发的时候也要确保支持修改和安装。该协议也明确规定受美国法律管辖'
+    lowRisk: 'Y'
+    black: 'N'
+    blackReason: ''
   - alias:
     - SIL Open Font License 1.1
     - SIL Open Font License, Version 1.1
@@ -3588,28 +3580,28 @@ Software Licenses:
     identifier: OFL-1.1
     fsfApproved: 'Y'
     osiApproved: 'Y'
-    oeApproved: 'N'
+    oeApproved: 'Y'
     lowRisk: 'N'
-    black: 'Y'
-    blackReason: '不建议引入，该协议适用于字体，在GPLv2的基础上增加了例外条款，如果使用此字体创建文档，并且将此字体嵌入到文档中，并不会导致生成的文件被GPL协议覆盖，另外在分发的时候也要确保支持修改和安装。该协议也明确规定受美国法律管辖'
+    black: 'N'
+    blackReason: ''
   - alias:
     - SIL Open Font License 1.1 with no Reserved Font Name
     identifier: OFL-1.1-no-RFN
     fsfApproved: 'N'
     osiApproved: 'Y'
-    oeApproved: 'N'
+    oeApproved: 'Y'
     lowRisk: 'N'
-    black: 'Y'
-    blackReason: '不建议引入，该协议适用于字体，在GPLv2的基础上增加了例外条款，如果使用此字体创建文档，并且将此字体嵌入到文档中，并不会导致生成的文件被GPL协议覆盖，另外在分发的时候也要确保支持修改和安装。该协议也明确规定受美国法律管辖'
+    black: 'N'
+    blackReason: ''
   - alias:
     - SIL Open Font License 1.1 with Reserved Font Name
     identifier: OFL-1.1-RFN
     fsfApproved: 'N'
     osiApproved: 'Y'
-    oeApproved: 'N'
+    oeApproved: 'Y'
     lowRisk: 'N'
-    black: 'Y'
-    blackReason: '不建议引入，该协议适用于字体，在GPLv2的基础上增加了例外条款，如果使用此字体创建文档，并且将此字体嵌入到文档中，并不会导致生成的文件被GPL协议覆盖，另外在分发的时候也要确保支持修改和安装。该协议也明确规定受美国法律管辖'
+    black: 'N'
+    blackReason: ''
   - alias:
     - OGC Software License, Version 1.0
     identifier: OGC-1.0
@@ -4036,6 +4028,7 @@ Software Licenses:
     - Python License 2.0
     - Python License, Version 2
     - PYTHON SOFTWARE FOUNDATION LICENSE VERSION 2
+    - Python
     identifier: Python-2.0
     fsfApproved: 'Y'
     osiApproved: 'Y'
@@ -5265,6 +5258,7 @@ Software Licenses:
     blackReason: ''
   - alias:
     - exceptions
+    - exception
     identifier: exceptions
     fsfApproved: 'N'
     osiApproved: 'N'
