Upd utopia license

--- a/src/reposca/config/Licenses.yaml
+++ b/src/reposca/config/Licenses.yaml
@@ -5405,7 +5405,7 @@ Software Licenses:
     exception: 'N'
   - alias:
     - TUG Utopia license agreement
-    identifier: Utpoia
+    identifier: Utopia
     fsfApproved: 'N'
     osiApproved: 'N'
     oeApproved: 'N'
