--- a/requirements.txt
+++ b/requirements.txt
@@ -20,4 +20,5 @@ GitPython==3.1.27
 DBUtils==1.3
 packaging==21.3
 spdx-tools==0.7.0a3
-attrs==22.1.0      
+attrs==22.1.0
+APScheduler==3.10.1      
