--- a/src/reposca/config/Licenses.yaml
+++ b/src/reposca/config/Licenses.yaml
@@ -650,6 +650,7 @@ Software Licenses:
     - Apache Software License, Version 1.1
     - ASL-1.1
     - ASL 1.1
+    - Sequence
     identifier: Apache-1.1
     fsfApproved: 'Y'
     osiApproved: 'Y'
