--- a/requirements.txt
+++ b/requirements.txt
@@ -21,4 +21,5 @@ DBUtils==1.3
 packaging==21.3
 spdx-tools==0.7.0a3
 attrs==22.1.0
-APScheduler==3.10.1      
+APScheduler==3.10.1
+pdfminer.six==20221105 
