--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,215 @@
 scancode-toolkit==31.0.1
+aiohttp==1.1.6
+altgraph==0.17.2
+APScheduler==3.10.1
+astroid==2.9.3
+async-timeout==4.0.2
+attrs==22.1.0
+autopep8==1.6.0
+banal==1.0.6
+bandit==1.7.4
 beautifulsoup4==4.11.1
-grimoirelab_toolkit==0.1.12
+binaryornot==0.4.4
+bitarray==2.1.0
+blis==0.7.4
+boolean.py==4.0
+catalogue==2.0.6
+cereslib==0.1.15
+certifi==2021.5.30
+cffi==1.14.5
+chardet==5.2.0
+charset-normalizer==2.0.2
+cheroot==8.6.0
+CherryPy==18.6.1
+click==8.0.1
+colorama==0.4.4
+colorlog==4.1.0
+commoncode==31.2.1
+construct==2.10.67
+container-inspector==32.0.1
+crc32c==2.2.post0
+cryptography==3.4.7
+cyclonedx-bom==3.11.7
+cyclonedx-python-lib==3.1.5
+cymem==2.0.5
+Cython==0.29.21
+DBUtils==1.3
+debian-inspector==31.0.0b1
+dockerfile-parse==1.2.0
+docopt==0.6.2
+docutils==0.18.1
+dparse==0.5.1
+dparse2==0.6.1
+dulwich==0.20.33
+dynaconf==3.1.8
+elasticsearch==6.3.1
+elasticsearch-dsl==6.3.1
+extractcode==31.0.0
+extractcode-7z==16.5.210531
+extractcode-libarchive==3.5.1.210531
+fasteners==0.16
+feedparser==6.0.8
+file-read-backwards==2.0.0
+fingerprints==1.0.3
+flake8==4.0.1
+Flask==2.0.3
+ftfy==6.0.3
+future==0.18.2
+gemfileparser==0.8.0
+geographiclib==1.52
+geopy==2.2.0
+gitdb==4.0.9
+GitPython==3.1.27
+graal==0.2.9
+grimoire-elk==0.99.0
+grimoirelab==0.2.68
+grimoirelab-panels==0.0.64
+grimoirelab-toolkit==0.1.12
+html5lib==1.1
+idna==2.10
+importlib-metadata==4.4.0
+inflection==0.5.1
+install==1.3.5
+intbitset==3.0.1
+isodate==0.6.0
 isort==5.10.1
+itsdangerous==2.1.0
+jaraco.classes==3.2.1
+jaraco.collections==3.5.1
+jaraco.context==4.1.1
+jaraco.functools==3.3.0
+jaraco.text==3.7.0
+javaproperties==0.8.0
+jieba==0.42.1
+Jinja2==3.0.3
+joblib==1.0.1
 jsonpath==0.82
+jsonstreams==0.6.0
+kidash==0.4.21
+kingarthur==0.1.20
+lazy-object-proxy==1.7.1
+license-expression==30.0.0
+lizard==1.16.6
+lockfile==0.12.2
+lxml==4.9.1
+MarkupSafe==2.0.1
+mccabe==0.6.1
+more-itertools==8.8.0
+multidict==6.0.2
+murmurhash==1.0.5
+networkx==2.7.1
+ngram==4.0.3
+Nirjas==0.0.5
+normality==2.2.2
+numpy==1.19.5
+packageurl-python==0.9.4
+packaging==21.3
+pandas==0.25.3
+parameter-expansion-patched==0.3.1
+patch==1.16
+pathy==0.6.0
+patsy==0.5.2
+pbr==5.8.1
+pdfminer.six==20201018
+pefile==2021.5.24
 perceval==0.17.17
-perceval_weblate==0.1.2
+perceval-finos==0.1.11
+perceval-mozilla==0.2.14
+perceval-opnfv==0.1.21
+perceval-puppet==0.1.20
+perceval-weblate==0.1.2
+Pillow==9.0.0
+pip-requirements-parser==32.0.1
+pipreqs==0.4.11
+pkginfo==1.7.0
+pkginfo2==30.0.0
+platformdirs==2.5.1
+pluggy==1.0.0
+plugincode==31.0.0b1
+ply==3.11
+portend==3.1.0
+preshed==3.0.5
+progress==1.5
+publicsuffix2==2.20191221
+pyahocorasick==2.0.0b1
+pycodestyle==2.8.0
+pycparser==2.20
+pydantic==1.8.2
+pydot==1.4.2
+pyflakes==2.4.0
+pygmars==0.7.0
+Pygments==2.9.0
+pyinstaller==4.7
+pyinstaller-hooks-contrib==2021.3
+PyJWT==2.3.0
+pylint==2.12.2
+pymaven-patch==0.3.0
 PyMySQL==0.9.3
+pyparsing==2.4.7
+python-daemon==2.1.2
+python-dateutil==2.8.2
+python-dotenv==0.20.0
+python-pptx==0.6.21
+python-rpm-spec==0.11
+python-stack==0.1.7.11
+python-stack-cli==0.2.15.5
+pytz==2021.1
+pywin32==303
+pywin32-ctypes==0.2.0
+pyxDamerauLevenshtein==1.7.0
 PyYAML==6.0
+rarfile==4.0
+rdflib==5.0.0
+redis==3.0.0
+regipy==2.0.0
 requests==2.26.0
+rq==1.0
+saneyaml==0.5.2
+scanoss==0.6.5
+scikit-learn==1.0
 scipy==1.7.1
-setuptools==58.1.0
+sgmllib3k==1.0.0
+sirmordred==0.2.43
+six==1.16.0
+smart-open==5.2.1
+smmap==5.0.0
+sortedcontainers==2.4.0
+sortinghat==0.7.18
+soupsieve==2.2.1
+spacy==3.1.3
+spacy-legacy==3.0.8
+spdx-tools==0.7.0a3
 SQLAlchemy==1.3.24
+srsly==2.4.1
+stack-require==0.0.2.1
+stack-scaffold==0.0.2b1
+statsmodels==0.13.2
+stevedore==3.5.0
+tempora==5.0.1
+text-unidecode==1.3
+textdistance==4.2.1
+thinc==8.0.10
+threadpoolctl==2.2.0
+toml==0.10.2
 tornado==6.1
 tqdm==4.62.3
+typecode==30.0.0
+typecode-libmagic==5.39.210531
+typer==0.4.0
+typing-extensions==3.10.0.0
+tzdata==2023.3
+tzlocal==5.0.1
 urllib3==1.25.8
-python-rpm-spec==0.11
-rarfile==4.0
-GitPython==3.1.27
-DBUtils==1.3
-packaging==21.3
-spdx-tools==0.7.0a3
-attrs==22.1.0
-APScheduler==3.10.1
-pdfminer.six==20221105 
+urlpy==0.5
+wasabi==0.8.2
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.3
+winnowing==0.2.1
+wrapt==1.13.3
+XlsxWriter==3.0.2
+xmltodict==0.12.0
+yarg==0.1.9
+yarl==1.7.2
+zc.lockfile==2.0
+zipp==3.4.1
